--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             door mijn lens.</p>
                         <button id="btnFotografie" class="lettertype2">Bekijk het hele item</button>
                     </div>
-                    <img src="assets/fotografie3.jpg" alt="Online Magazine" class="image-left">
+                    <img src="assets/fotografie3.JPG" alt="Online Magazine" class="image-left">
                 </div>
 
                 <div class="content">
@@ -536,7 +536,7 @@
                     <h6 class="lettertypegroter">Contact me</h6>
                     <h5 class="lettertype2">Let's grab a coffee</h5>
                 </div>
-                <div><img class="logoheader1" src="../assets/logoPortfolio.png" alt="Logo"></div>
+                <div ><img class="logoheader1" src="assets/logoPortfolio.png" alt="Logo"></div>
                 <div class="contact-section2 lettertype1">
                     <div class="left-section">
                         <h6 class="lettertypegroter">yentesparla@hotmail.com</h6>
