--- a/graphic-design.html
+++ b/graphic-design.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="headerGraphicD" >
         <div class="container">
             <nav>
                 <a href="index.html#over-mij">Over mij</a>
@@ -33,13 +33,13 @@
     </header>
     <main>
         <div class="image-container">
-            <img src="assets/Mock-upBlurb.png" alt="Blurb Project">
+            <img class="img" src="assets/Mock-upBlurb.png" alt="Blurb Project">
             <img src="assets/cirkelHuisstijl.png" alt="" class="overlay-image clickable-image"
                 data-modal="myModalBlurb">
         </div>
 
         <div class="image-container">
-            <img src="assets/CoodleFlyer.png" alt="Coodle Project">
+            <img class="img" src="assets/CoodleFlyer.png" alt="Coodle Project">
             <img src="assets/cirkelHuisstijl.png" alt="" class="overlay-image clickable-image"
                 data-modal="myModalCoodle">
         </div>
