--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <header>
         <div class="container">
-            <nav>
+            <a href="index.html">
+                <img id="logo" src="assets/logo.png" alt="Logo">
+            </a>
+            <nav id="nav-menu">
                 <a href="index.html#over-mij">Over mij</a>
                 <div class="dropdown">
                     <a href="index.html#mijn-projecten">Mijn projecten</a>
@@ -25,11 +28,13 @@
                 </div>
                 <a href="index.html#contact">Contact</a>
             </nav>
-            <a href="index.html">
-                <img id="logo" src="assets/logo.png" alt="Logo">
-            </a>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-
+       
         <div class="header-content container">
             <div class="header-text">
                 <h1>Hi, ik ben<br> Yente Sparla</h1>
