--- a/web-design.html
+++ b/web-design.html
@@ -9,7 +9,7 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <header>
+    <header class="headerGraphicD">
         <div class="container">
             <nav>
                 <a href="index.html#over-mij">Over mij</a>
@@ -31,12 +31,12 @@
     </header>
     <main>
         <div class="image-container">
-            <img src="assets/MacbookDP.jpg" alt="Design Papers"> <!-- Dit is NIET klikbaar -->
+            <img class="img" src="assets/MacbookDP.jpg" alt="Design Papers"> 
             <img src="assets/cirkelHuisstijl.png" alt="" class="overlay-image clickable-image" data-modal="myModalDP">
         </div>
         
         <div class="image-container">
-            <img src="assets/DesignThinkTwice.jpg" alt="Think Twice"> <!-- Dit is NIET klikbaar -->
+            <img class="img" src="assets/DesignThinkTwice.jpg" alt="Think Twice"> 
             <img src="assets/cirkelHuisstijl.png" alt="" class="overlay-image clickable-image" data-modal="myModalTT">
         </div>
         
