--- a/fotografie.html
+++ b/fotografie.html
@@ -12,11 +12,15 @@
 
 <body>
     <header class="headerFotografie">
+    
         <div class="container">
+            <a href="index.html">
+                <img id="logo" src="assets/logo.png" alt="Logo">
+            </a>
             <nav>
                 <a href="index.html#over-mij">Over mij</a>
                 <div class="dropdown">
-                    <a href="index.html#mijn-projecten">Mijn projecten</a>
+                    <a href="index.html#mijn-projecten">Mijn vaardigheden</a>
                     <div class="dropdown-content">
                         <a href="graphic-design.html">Graphic Design</a>
                         <a href="fotografie.html">Fotografie</a>
@@ -25,9 +29,7 @@
                 </div>
                 <a href="index.html#contact">Contact</a>
             </nav>
-            <a href="index.html">
-                <img id="logo" src="assets/logo.png" alt="Logo">
-            </a>
+        
         </div>
         <h1 class="titelProjecten">Fotografie</h1>
     </header>
