--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav id="nav-menu">
                 <a href="index.html#over-mij">Over mij</a>
                 <div class="dropdown">
-                    <a href="index.html#mijn-projecten">Mijn projecten</a>
+                    <a href="index.html#mijn-projecten">Mijn vaardigheden</a>
                     <div class="dropdown-content">
                         <a href="graphic-design.html">Graphic Design</a>
                         <a href="fotografie.html">Fotografie</a>
@@ -53,10 +53,7 @@
     <main>
         <div id="over-mij" class="about-section">
             <div class="skills1">
-                <div class="skill-card">
-                    <img src="assets/webdesign.png" alt="Web Design">
-                    <span>Web Design</span>
-                </div>
+              
                 <div class="skill-card">
                     <img src="assets/graphicdesign.png" alt="Graphic Design">
                     <span>Graphic Design</span>
@@ -64,6 +61,10 @@
                 <div class="skill-card">
                     <img src="assets/fotografie.png" alt="Fotografie">
                     <span>Fotografie</span>
+                </div>
+                <div class="skill-card">
+                    <img src="assets/webdesign.png" alt="Web Design">
+                    <span>Web Design</span>
                 </div>
             </div>
             <div class="about-text">
@@ -76,7 +77,7 @@
             </div>
         </div>
         <div id="mijn-projecten" class="project-section">
-            <h2>Mijn projecten</h2>
+            <h2>Mijn vaardigheden</h2>
             <div class="projects">
                 <a href="graphic-design.html" class="project-card graphic-design">Graphic Design</a>
                 <a href="fotografie.html" class="project-card fotografie">Fotografie</a>
