--- a/graphic-design.html
+++ b/graphic-design.html
@@ -37,7 +37,7 @@
         <div class="image-container">
             <img class="img" src="assets/Mock-upBlurb.png" alt="Blurb Project">
             <div class="project-overlay">
-                <h3 class="titelProjectOverlay">Blurb Project</h3>
+                <h3 class="titelProjectOverlay">Blurb</h3>
                 <div class="category-tags">
                     <div class="category-tag">Grafisch Design</div>
                     <div class="category-tag">Video</div>
@@ -60,7 +60,7 @@
         <div class="image-container">
             <img class="img" src="assets/CoodleFlyer.png" alt="Coodle Project">
             <div class="project-overlay">
-                <h3 class="titelProjectOverlay">Coodle Project</h3>
+                <h3 class="titelProjectOverlay">Coodle</h3>
                 <div class="category-tags">
                     <div class="category-tag">Grafisch Design</div>
                     <div class="category-tag">Video</div>
