--- a/web-design.html
+++ b/web-design.html
@@ -93,7 +93,7 @@
 
                 <div class="lijn"></div>
                 <div class="InfoSchoolproject">
-                    <h4 class="InfoSchoolprojectTekst">Schoolproject - Cubiss</h4>
+                    <h4 class="InfoSchoolprojectTekst">Schoolproject</h4>
                     <h4 class="InfoSchoolprojectTekst">2023</h4>
                 </div>
                 <div class="Mockups">
